trigger processing, FOM update from federepl, processing nested data elements in fixed records and arrays